Pulling in search params if linked from OpenNTF Language updates Date issues with view Links on footer needed updating